--- a/src/index.css
+++ b/src/index.css
@@ -715,7 +715,7 @@ html {
 .impact-number {
   font-size: 2rem;
   font-weight: bold;
-  color: #007bff;
+  color: #1f7de289;
   margin-bottom: 0.5rem;
 }
 
